# refcode

elf/: elf.c
linux/: attack_target  test.c
linux/ptrace/: Makefile  aarch64.ini  meson.build
linux/ptrace/dev_mem/: dev_mem.c  meson.build
linux/ptrace/inc/: autofree.h  childprocess.h  common.h  ctype.h  logging.h
linux/ptrace/libs/: meson.build
linux/ptrace/libs/hexmem/: hex.c  hex.h
linux/ptrace/pid_mem/: meson.build  proc_mem.c  readmem.c
linux/ptrace/ptrace_mem/: meson.build  ptrace_mem.c
linux/ptrace/syscall/: childprocess.c  syscall.c
